--- a/configs/bhvae.yaml
+++ b/configs/bhvae.yaml
@@ -1,13 +1,13 @@
 model_params:
   name: 'BetaVAE'
   in_channels: 3
-  latent_dim: 128
+  latent_dim: 32
   loss_type: 'H'
   beta: 10.
 
 exp_params:
-  dataset: celeba
-  data_path: "../../shared/Data/"
+  dataset: coinrun
+  data_path: "dataset/data.npz"
   img_size: 64
   batch_size: 144 # Better to have a square number
   LR: 0.0005
