--- a/configs/bhvae.yaml
+++ b/configs/bhvae.yaml
@@ -1,7 +1,7 @@
 model_params:
   name: 'BetaVAE'
   in_channels: 3
-  latent_dim: 128
+  latent_dim: 32
   loss_type: 'H'
   beta: 10.
 
@@ -16,10 +16,11 @@ exp_params:
 
 trainer_params:
   gpus: 1
-  max_nb_epochs: 200
-  max_epochs: 200
+  max_nb_epochs: 7
+  max_epochs: 7
 
 logging_params:
   save_dir: "logs/"
+  save_dir_cp: "checkpoints/"
   name: "BetaVAE_H"
   manual_seed: 1265
