--- a/configs/bhvae.yaml
+++ b/configs/bhvae.yaml
@@ -16,11 +16,9 @@ exp_params:
 
 trainer_params:
   gpus: 1
-  max_nb_epochs: 500
-  max_epochs: 500
+  max_epochs: 10 # 200
 
 logging_params:
-  save_dir: "logs/"
-  save_dir_cp: "checkpoints/"
+  save_dir: "s3://nathan.experiments/adversarial/vae/{date}/"
   name: "BetaVAE_H"
   manual_seed: 1265
