--- a/configs/bbvae.yaml
+++ b/configs/bbvae.yaml
@@ -1,15 +1,15 @@
 model_params:
   name: 'BetaVAE'
   in_channels: 3
-  latent_dim: 128
+  latent_dim: 32
   loss_type: 'B'
   gamma: 10.0
   max_capacity: 25
   Capacity_max_iter: 10000
 
 exp_params:
-  dataset: celeba
-  data_path: "../../shared/Data/"
+  dataset: coinrun
+  data_path: "dataset/data.npz"
   img_size: 64
   batch_size: 144 # Better to have a square number
   LR: 0.0005
@@ -18,8 +18,7 @@ exp_params:
 
 trainer_params:
   gpus: 1
-  max_nb_epochs: 50
-  max_epochs: 50
+  max_epochs: 200
 
 logging_params:
   save_dir: "logs/"
