--- a/configs/factorvae.yaml
+++ b/configs/factorvae.yaml
@@ -1,12 +1,12 @@
 model_params:
   name: 'FactorVAE'
   in_channels: 3
-  latent_dim: 128
+  latent_dim: 32
   gamma: 6.4
 
 exp_params:
-  dataset: celeba
-  data_path: "../../shared/Data/"
+  dataset: coinrun
+  data_path: "dataset/data.npz"
   submodel: 'discriminator'
   retain_first_backpass: True
   img_size: 64
@@ -18,9 +18,8 @@ exp_params:
   scheduler_gamma_2: 0.95
 
 trainer_params:
-  gpus: [3]
-  max_nb_epochs: 30
-  max_epochs: 50
+  gpus: 1
+  max_epochs: 200
 
 logging_params:
   save_dir: "logs/"
