--- a/configs/vae.yaml
+++ b/configs/vae.yaml
@@ -1,21 +1,20 @@
 model_params:
   name: 'VanillaVAE'
   in_channels: 3
-  latent_dim: 128
+  latent_dim: 64
 
 exp_params:
-  dataset: celeba
-  data_path: "../../shared/Data/"
+  dataset: coinrun
+  data_path: "dataset/data.npz"
   img_size: 64
   batch_size: 144 # Better to have a square number
-  LR: 0.005
+  LR: 0.0005
   weight_decay: 0.0
   scheduler_gamma: 0.95
 
 trainer_params:
   gpus: 1
-  max_nb_epochs: 50
-  max_epochs: 30
+  max_epochs: 500
 
 logging_params:
   save_dir: "logs/"
